client/src/components/ControlBar/ControlBar.css
.controlBar {
  position: fixed; 
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  height: var(--controlBar-height); 
  background: rgba(44, 62, 80, 0.541);
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
}

.brand {
  flex: 0 0 auto;
  object-fit: cover;
  z-index: -1;
  font-size: 8cqw;
  text-align: center;
  flex-basis: 30%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.centerSection{
  flex-basis: 40%;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.lastRun, .lastRunPeriod, .hoursSincePowerup{
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3cqw;
  width: 100%;
}

.buttonRow {
  container-type: inline-size;
  flex: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
}

.sidebarButton, .selectedHours {
  flex: 1;
  display: flex;
  align-items: center;
  font-size: 4cqw;
  text-align: center;
  cursor: pointer;
  transition: background 0.2s;
  justify-content: space-around;
  width: 100%;
}

.chartSection {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  flex-basis: 30%;
  align-items: stretch;
  height: 100%;
}
.chartContainer {
  flex-basis: 50%;
  position: relative;
  box-sizing: border-box;
  height: 50%;
}
.chartContainer canvas {
  width: 100% !important;
  height: 100% !important;
}

.chartWatermark {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  
  font-size: 3cqw; 
  font-weight: bold;
  color: rgba(255, 255, 255, 0.1);
  z-index: 0; 
  pointer-events: none; 
  user-select: none; 
}

.label {
    color: #888888;
  font-weight: bold;
}

.unit {
  color: #888888;
  font-style: italic;
}
.value {
  color: var(--menu-colour);
}
span + span {
  margin-left: 10px; /* adds space to the left of all but the first span */
}

